# SimpleCamera

app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: native-lib.cpp
app/src/main/java/: com_appends_JniUtils_EffectUtil.h
app/src/main/java/com/android/camera/: CameraActivity.java  CameraModule.java  CaptureLayoutHelper.java  CaptureModule.java  CaptureModuleUI.java  Storage.java
app/src/main/java/com/appends/JniUtils/: EffectUtil.java  JniTest.java
app/src/main/java/com/appends/common/: DetailSettingItem.java
app/src/main/java/com/appends/feature/: FeatureController.java
app/src/main/java/com/appends/module/: BlurModule.java  ManualModule.java
app/src/main/java/com/appends/ui/: AppendSettingLayout.java  BlurIndicatorView.java  BlurModuleUI.java  (+4 more)
app/src/main/res/drawable/: append_camera_setting_awb_highlight.xml  append_camera_setting_awb_normal.xml  append_camera_setting_edge_highlight.xml  append_camera_setting_edge_normal.xml  append_camera_setting_effect_normal.xml  append_camera_setting_exposure_normal.xml  append_camera_setting_scene_highlight.xml  append_camera_setting_scene_normal.xml  append_camera_setting_shading_highlight.xml  append_camera_setting_shading_normal.xml  camera_blur_seek_bar.xml
app/src/main/res/layout/: blur_layout.xml  manual_layout.xml  sticky_bottom_capture_layout.xml
app/src/main/res/layout-land/: indicators.xml  mode_options.xml
app/src/main/res/layout-port/: indicators.xml  mode_options.xml
app/src/main/res/values/: append_string.xml  arrays.xml  integers.xml  strings.xml
app/src/main/res/values-v21/: arrays.xml
(+22 files in other folders)
